// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary should render 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing a total of 
    $2.35
     for 
    1
     
    expense
    . 
  </h1>
</div>
`;

exports[`ExpenseSummary should render multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing a total of 
    $103,923.89
     for 
    4
     
    expenses
    . 
  </h1>
</div>
`;
